--- a/index.html
+++ b/index.html
@@ -29,10 +29,20 @@
                     </div>
                     <button id="next-btn" class="btn btn-primary mt-3 text-center">다음</button>
                 </div>
-                <div id="result" class="d-none">
-                    <h3>당신의 MBTI 유형은 <span id="mbti-type"></span>입니다.</h3>
-                    <p id="mbti-desc"></p>
-                    <button id="restart-btn" class="btn btn-primary mt-3">다시 검사하기</button>
+                <!-- 결과 페이지 -->
+                <div id="result" style="display: none;">
+                    <div class="card mt-5">
+                        <div class="card-header">
+                            <h2>당신의 MBTI 유형은 <span id="mbti-type"></span>입니다.</h2>
+                        </div>
+                        <div class="card-body">
+                            <p id="mbti-desc"></p>
+                            <div class="share-buttons">
+                                <!-- 첫 페이지로 돌아가는 링크 -->
+                                <a href="index.html" class="btn btn-primary mt-3">다시 검사하기</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -40,3 +50,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+
